--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
   <header>
     <div class="menu-toggle">
-      <div class="bar"></div>
-      <div class="bar"></div>
-      <div class="bar"></div>
+      <div class="bar1"></div>
+      <div class="bar2"></div>
+      <div class="bar3"></div>
     </div>
 
     <nav class="navigation">
@@ -62,7 +62,7 @@
       <h3>Contact Information</h3>
       <h4>Vivesh</h4>
       <p>Phone: 041121513</p>
-      <p>Email: email@example.com</p>
+      <p>Email: viveshmannie@gmail.com</p>
       <p>ABN: 61669696824</p>
       <p>Lekker Kos LTD</p>
     </div>
