--- a/menu.html
+++ b/menu.html
@@ -9,9 +9,9 @@
 <body>
     <header>
         <div class="menu-toggle">
-          <div class="bar"></div>
-          <div class="bar"></div>
-          <div class="bar"></div>
+          <div class="bar1"></div>
+          <div class="bar2"></div>
+          <div class="bar3"></div>
         </div>  
 
         <nav class="navigation">
@@ -56,7 +56,7 @@
                 <h3>Bunny Chow</h3>
                 <ul>
                     <li>1/4 lamb or chicken - $20</li>
-                    <li>1/4 Veggie - $20</li>
+                    <li>1/4 Veggie - $15</li>
                 </ul>
             </div>
             
@@ -88,7 +88,7 @@
             
             <!-- Kock Sisters -->
             <div class="menu-item">
-                <h3>Kock Sisters</h3>
+                <h3>Koeksisters</h3>
                 <ul>
                     <li>4 Pack - $8</li>
                 </ul>
@@ -102,7 +102,7 @@
       <h3>Contact Information</h3>
       <h4>Vivesh</h4>
       <p>Phone: 041121513</p>
-      <p>Email: email@example.com</p>
+      <p>Email: viveshmannie@gmail.com</p>
       <p>ABN: 61669696824</p>
       <p>Lekker Kos LTD</p>
     </div>
